tests/debug_test.txt
============================= test session starts =============================
platform win32 -- Python 3.14.3, pytest-9.0.2, pluggy-1.6.0 -- C:\Users\Leandro\Desktop\Belajar\Kuliah\SMS 6\INTERNSHIP KALBE\claimly-rag-chatbot\venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\Leandro\Desktop\Belajar\Kuliah\SMS 6\INTERNSHIP KALBE\claimly-rag-chatbot
configfile: pytest.ini
plugins: anyio-4.13.0, asyncio-1.3.0, cov-7.1.0, env-1.6.0, mock-3.15.1
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 5 items

tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_fetch_patient_records_success PASSED [ 20%]
tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_fetch_patient_records_no_token PASSED [ 40%]
tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_fetch_patient_records_api_error FAILED [ 60%]
tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_rank_relevant_records_success FAILED [ 80%]
tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_rank_relevant_records_fallback FAILED [100%]

================================== FAILURES ===================================
________ TestMedicalRecordService.test_fetch_patient_records_api_error ________
app\services\medical_record_service.py:37: in fetch_patient_records
    raise Exception("Maaf, kami tidak dapat mengakses data medis Anda saat ini. Pastikan akun Anda sudah terdaftar dengan benar.")
E   Exception: Maaf, kami tidak dapat mengakses data medis Anda saat ini. Pastikan akun Anda sudah terdaftar dengan benar.

During handling of the above exception, another exception occurred:
tests\unit\test_medical_record_service.py:81: in test_fetch_patient_records_api_error
    await service.fetch_patient_records("user_1", "token")
app\services\medical_record_service.py:40: in fetch_patient_records
    raise Exception("Server medis sedang sibuk atau tidak merespons. Mohon coba lagi beberapa saat lagi.")
E   Exception: Server medis sedang sibuk atau tidak merespons. Mohon coba lagi beberapa saat lagi.

During handling of the above exception, another exception occurred:
tests\unit\test_medical_record_service.py:80: in test_fetch_patient_records_api_error
    with pytest.raises(Exception, match="kami tidak dapat mengakses data medis"):
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   AssertionError: Regex pattern did not match.
E     Expected regex: 'kami tidak dapat mengakses data medis'
E     Actual message: 'Server medis sedang sibuk atau tidak merespons. Mohon coba lagi beberapa saat lagi.'
------------------------------ Captured log call ------------------------------
ERROR    uvicorn.error:medical_record_service.py:36 Medical API Error 500: <MagicMock name='mock.get().text' id='2523093518720'>
ERROR    uvicorn.error:medical_record_service.py:39 Connection to Medical API failed: Maaf, kami tidak dapat mengakses data medis Anda saat ini. Pastikan akun Anda sudah terdaftar dengan benar.
_________ TestMedicalRecordService.test_rank_relevant_records_success _________
tests\unit\test_medical_record_service.py:99: in test_rank_relevant_records_success
    with patch('app.services.ai_service.ai_service.get_client', return_value=mock_client):
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\Leandro\AppData\Local\Python\pythoncore-3.14-64\Lib\unittest\mock.py:1503: in __enter__
    original, local = self.get_original()
                      ^^^^^^^^^^^^^^^^^^^
C:\Users\Leandro\AppData\Local\Python\pythoncore-3.14-64\Lib\unittest\mock.py:1473: in get_original
    raise AttributeError(
E   AttributeError: <app.services.mocks.ai_service_mock.MockAIService object at 0x0000024B73BF3620> does not have the attribute 'get_client'
________ TestMedicalRecordService.test_rank_relevant_records_fallback _________
tests\unit\test_medical_record_service.py:112: in test_rank_relevant_records_fallback
    with patch('app.services.ai_service.ai_service.get_client', side_effect=Exception("LLM Error")):
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\Leandro\AppData\Local\Python\pythoncore-3.14-64\Lib\unittest\mock.py:1503: in __enter__
    original, local = self.get_original()
                      ^^^^^^^^^^^^^^^^^^^
C:\Users\Leandro\AppData\Local\Python\pythoncore-3.14-64\Lib\unittest\mock.py:1473: in get_original
    raise AttributeError(
E   AttributeError: <app.services.mocks.ai_service_mock.MockAIService object at 0x0000024B73BF3620> does not have the attribute 'get_client'
============================== warnings summary ===============================
venv\Lib\site-packages\google\genai\types.py:43
  C:\Users\Leandro\Desktop\Belajar\Kuliah\SMS 6\INTERNSHIP KALBE\claimly-rag-chatbot\venv\Lib\site-packages\google\genai\types.py:43: DeprecationWarning: '_UnionGenericAlias' is deprecated and slated for removal in Python 3.17
    VersionedUnionType = Union[builtin_types.UnionType, _UnionGenericAlias]

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=============================== tests coverage ================================
_______________ coverage: platform win32, python 3.14.3-final-0 _______________

Name                                     Stmts   Miss  Cover   Missing
----------------------------------------------------------------------
app\__init__.py                              0      0   100%
app\core\__init__.py                         0      0   100%
app\core\config.py                          14      0   100%
app\core\http.py                            16      7    56%   10-16, 21-23, 27
app\core\redis_pool.py                      27     27     0%   1-37
app\core\supabase.py                        11      2    82%   19, 22
app\main.py                                 51     51     0%   1-87
app\models\__init__.py                       0      0   100%
app\models\schemas.py                       14      0   100%
app\routers\__init__.py                      0      0   100%
app\routers\websocket.py                    79     79     0%   1-128
app\services\__init__.py                     0      0   100%
app\services\ai_service.py                 121    100    17%   15-16, 20, 24-31, 35-45, 51-73, 77-160, 167-273, 281
app\services\identity_service.py            26     26     0%   1-37
app\services\kms_service.py                 70     48    31%   20-26, 31-35, 40-45, 53-69, 77-119
app\services\medical_record_service.py      46     17    63%   47-98
app\services\mocks\ai_service_mock.py       29     14    52%   16-17, 21-22, 26-27, 31-42, 47-54
app\services\redis_service.py               17      7    59%   16, 20, 24, 28-36
app\services\supabase_service.py            21      9    57%   9-18, 23-30, 35-43, 48-50
app\utils\__init__.py                        0      0   100%
app\workers\__init__.py                      0      0   100%
app\workers\rag_worker.py                   42     42     0%   1-69
----------------------------------------------------------------------
TOTAL                                      584    429    27%
=========================== short test summary info ===========================
FAILED tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_fetch_patient_records_api_error - AssertionError: Regex pattern did not match.
  Expected regex: 'kami tidak dapat mengakses data medis'
  Actual message: 'Server medis sedang sibuk atau tidak merespons. Mohon coba lagi beberapa saat lagi.'
FAILED tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_rank_relevant_records_success - AttributeError: <app.services.mocks.ai_service_mock.MockAIService object at 0x0000024B73BF3620> does not have the attribute 'get_client'
FAILED tests/unit/test_medical_record_service.py::TestMedicalRecordService::test_rank_relevant_records_fallback - AttributeError: <app.services.mocks.ai_service_mock.MockAIService object at 0x0000024B73BF3620> does not have the attribute 'get_client'
=================== 3 failed, 2 passed, 1 warning in 10.04s ===================
